# ouro

./: .dockerignore  .env.agent.example  .env.example  .env.mcp.example  .env.postgres.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  HEARTBEAT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.json
.claude/tasks/: README.md  agent-py-deploy.md  centralized-config.md  dedupe-llm-generation-envelope.md  drop-legacy-channel-posts.md  eval-agent-e2e.md  eval-foundation.md  eval-llm-judge.md  eval-longform-queries.md  eval-trajectory-judge.md  graceful-shutdown.md  infra-module.md  injectable-logger.md  knowledge-base.md  module-invariants-docs.md  multi-chunk-rag.md  search-news-multi-query-batch.md  sqlite-factory.md  tests-foundation.md  transaction-boundaries.md  (+2 more)
agent-py/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
agent-py/agent_py/: __init__.py  engine.py  mcp_client.py  models.py  session.py  session_context.py  skills.py  synthetic_tools.py  tracing.py
agent-py/agent_py/db/: memory.py
agent-py/agent_py/supervisor/: fallback.py  main.py
agent-py/agent_py/workflow/: __init__.py  compile.py  dsl.py  graph.py  variables.py
agent-py/skills.default/: news-query.md  planner.md  recovery.md  telegram.md
skills/: dreaming.md  handoff.md  nashdom-bill.md  news-digest.md  tech-digest.md  telegram.md
skills.default/: dreaming.md  handoff.md  nashdom-bill.md  news-digest.md  news-query.md  planner.md  routing.md  scheduler.md  tech-digest.md  telegram.md
(+3 files in other folders)
