[project]
name = "agent-py"
version = "0.1.0"
description = "Signal-driven agent supervisor on LangGraph/LangChain, part of the mcp-tools monorepo."
requires-python = ">=3.12"

# Pinned to the major the code is built on (langchain 1.x / langgraph 1.x —
# the `langchain.agents.create_agent` API). Lower bounds are the minor from
# the tested env; the `<2` ceiling keeps the Docker build from jumping to the
# next framework major. uv.lock pins exact + transitive versions.
dependencies = [
    "langgraph>=1.2,<2",
    "langchain>=1.3,<2",
    "langchain-core>=1.4,<2",
    "langchain-openai>=1.2,<2",
    "langchain-deepseek>=1.1,<2",
    "langchain-mcp-adapters>=0.2,<1",
    "pydantic>=2.11,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
# Tracing. LangSmith is enabled by env vars (LANGCHAIN_TRACING_V2=true);
# Langfuse via a callback handler. See agent_py/tracing.py.
tracing = ["langfuse>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line length is the formatter's job

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The package dir (`agent_py`, underscore) differs from the project name
# (`agent-py`, hyphen), so state it explicitly — hatchling should not guess
# during `uv sync` / the wheel build in Docker.
[tool.hatch.build.targets.wheel]
packages = ["agent_py"]
